csharp/WhereIsMyTransport/Protobuf/ProtocolBuffers3Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/NickCuthbert/IdeaProjects/ProtobufGrammar/src\ProtocolBuffers3.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace WhereIsMyTransport.Protobuf {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class ProtocolBuffers3Parser : Parser {
	public const int
		WS=1, COMMENT=2, LINE_COMMENT=3, BuiltInTypes=4, AssignmentOperator=5, 
		ExpressionSeparator=6, SyntaxKeyword=7, LanguageVersionConstant=8, ImportKeyword=9, 
		ImportModifier=10, RepeatedKeyword=11, PackageKeyword=12, OneOfKeyword=13, 
		MapKeyword=14, OptionKeyword=15, EnumKeyword=16, MessageKeyword=17, ServiceKeyword=18, 
		RpcKeyword=19, StreamKeyword=20, ReturnsKeyword=21, GenericTypeOpen=22, 
		GenericTypeClose=23, ToKeyword=24, ReservedKeyword=25, ListSeparator=26, 
		OptionsOpen=27, OptionsClose=28, BodyOpen=29, BodyClose=30, GroupingOpen=31, 
		GroupingClose=32, BooleanLiteral=33, Identifier=34, FullIdentifier=35, 
		Dot=36, Letter=37, Sign=38, IntegerLiteral=39, DecimalLiteral=40, DecimalDigit=41, 
		NonZeroDecimalDigit=42, OctalDigit=43, HexDigit=44, OctalLiteral=45, HexLiteral=46, 
		FloatLiteral=47, Exponent=48, Decimals=49, SingleQuote=50, DoubleQuote=51, 
		CharValue=52, HexEscape=53, OctalEscape=54, CharEscape=55, StringLiteral=56, 
		EmptyStatement=57, Keyword=58;
	public const int
		RULE_optionName = 0, RULE_typeName = 1, RULE_fieldName = 2, RULE_syntax = 3, 
		RULE_importStatement = 4, RULE_package = 5, RULE_optionValue = 6, RULE_option = 7, 
		RULE_messageType = 8, RULE_enumType = 9, RULE_type = 10, RULE_fieldNumber = 11, 
		RULE_fieldOption = 12, RULE_fieldOptions = 13, RULE_repeated = 14, RULE_field = 15, 
		RULE_oneofField = 16, RULE_oneof = 17, RULE_keyType = 18, RULE_map = 19, 
		RULE_range = 20, RULE_ranges = 21, RULE_reservedField = 22, RULE_reservedFields = 23, 
		RULE_reserved = 24, RULE_enum = 25, RULE_enumBody = 26, RULE_enumField = 27, 
		RULE_message = 28, RULE_messageBody = 29, RULE_service = 30, RULE_rpc = 31, 
		RULE_topLevelDefinition = 32, RULE_proto = 33;
	public static readonly string[] ruleNames = {
		"optionName", "typeName", "fieldName", "syntax", "importStatement", "package", 
		"optionValue", "option", "messageType", "enumType", "type", "fieldNumber", 
		"fieldOption", "fieldOptions", "repeated", "field", "oneofField", "oneof", 
		"keyType", "map", "range", "ranges", "reservedField", "reservedFields", 
		"reserved", "enum", "enumBody", "enumField", "message", "messageBody", 
		"service", "rpc", "topLevelDefinition", "proto"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'='", null, "'syntax'", null, "'import'", 
		null, "'repeated'", "'package'", "'oneof'", "'map'", "'option'", "'enum'", 
		"'message'", "'service'", "'rpc'", "'stream'", "'returns'", "'<'", "'>'", 
		"'to'", "'reserved'", "','", "'['", "']'", "'{'", "'}'", "'('", "')'", 
		null, null, null, "'.'", null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "'''", "'\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "COMMENT", "LINE_COMMENT", "BuiltInTypes", "AssignmentOperator", 
		"ExpressionSeparator", "SyntaxKeyword", "LanguageVersionConstant", "ImportKeyword", 
		"ImportModifier", "RepeatedKeyword", "PackageKeyword", "OneOfKeyword", 
		"MapKeyword", "OptionKeyword", "EnumKeyword", "MessageKeyword", "ServiceKeyword", 
		"RpcKeyword", "StreamKeyword", "ReturnsKeyword", "GenericTypeOpen", "GenericTypeClose", 
		"ToKeyword", "ReservedKeyword", "ListSeparator", "OptionsOpen", "OptionsClose", 
		"BodyOpen", "BodyClose", "GroupingOpen", "GroupingClose", "BooleanLiteral", 
		"Identifier", "FullIdentifier", "Dot", "Letter", "Sign", "IntegerLiteral", 
		"DecimalLiteral", "DecimalDigit", "NonZeroDecimalDigit", "OctalDigit", 
		"HexDigit", "OctalLiteral", "HexLiteral", "FloatLiteral", "Exponent", 
		"Decimals", "SingleQuote", "DoubleQuote", "CharValue", "HexEscape", "OctalEscape", 
		"CharEscape", "StringLiteral", "EmptyStatement", "Keyword"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ProtocolBuffers3.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ProtocolBuffers3Parser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class OptionNameContext : ParserRuleContext {
		public FieldNameContext fieldName() {
			return GetRuleContext<FieldNameContext>(0);
		}
		public ITerminalNode[] Identifier() { return GetTokens(ProtocolBuffers3Parser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(ProtocolBuffers3Parser.Identifier, i);
		}
		public ITerminalNode GroupingOpen() { return GetToken(ProtocolBuffers3Parser.GroupingOpen, 0); }
		public ITerminalNode GroupingClose() { return GetToken(ProtocolBuffers3Parser.GroupingClose, 0); }
		public ITerminalNode FullIdentifier() { return GetToken(ProtocolBuffers3Parser.FullIdentifier, 0); }
		public ITerminalNode Keyword() { return GetToken(ProtocolBuffers3Parser.Keyword, 0); }
		public OptionNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterOptionName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitOptionName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionNameContext optionName() {
		OptionNameContext _localctx = new OptionNameContext(Context, State);
		EnterRule(_localctx, 0, RULE_optionName);
		int _la;
		try {
			State = 85;
			switch (TokenStream.La(1)) {
			case BuiltInTypes:
			case ImportKeyword:
			case ImportModifier:
			case PackageKeyword:
			case OneOfKeyword:
			case MapKeyword:
			case OptionKeyword:
			case EnumKeyword:
			case MessageKeyword:
			case ServiceKeyword:
			case RpcKeyword:
			case StreamKeyword:
			case ReturnsKeyword:
			case ToKeyword:
			case ReservedKeyword:
			case GroupingOpen:
			case BooleanLiteral:
			case Identifier:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				switch (TokenStream.La(1)) {
				case BuiltInTypes:
				case ImportKeyword:
				case ImportModifier:
				case PackageKeyword:
				case OneOfKeyword:
				case MapKeyword:
				case OptionKeyword:
				case EnumKeyword:
				case MessageKeyword:
				case ServiceKeyword:
				case RpcKeyword:
				case StreamKeyword:
				case ReturnsKeyword:
				case ToKeyword:
				case ReservedKeyword:
				case BooleanLiteral:
				case Identifier:
					{
					State = 68; fieldName();
					}
					break;
				case GroupingOpen:
					{
					{
					State = 69; Match(GroupingOpen);
					State = 72;
					switch (TokenStream.La(1)) {
					case FullIdentifier:
						{
						State = 70; Match(FullIdentifier);
						}
						break;
					case BuiltInTypes:
					case ImportKeyword:
					case ImportModifier:
					case PackageKeyword:
					case OneOfKeyword:
					case MapKeyword:
					case OptionKeyword:
					case EnumKeyword:
					case MessageKeyword:
					case ServiceKeyword:
					case RpcKeyword:
					case StreamKeyword:
					case ReturnsKeyword:
					case ToKeyword:
					case ReservedKeyword:
					case BooleanLiteral:
					case Identifier:
						{
						State = 71; fieldName();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 74; Match(GroupingClose);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==Dot) {
					{
					{
					State = 77; Match(Dot);
					State = 78; Match(Identifier);
					}
					}
					State = 83;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				break;
			case Keyword:
				EnterOuterAlt(_localctx, 2);
				{
				State = 84; Match(Keyword);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(ProtocolBuffers3Parser.Identifier, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterTypeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitTypeName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_typeName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldNameContext : ParserRuleContext {
		public ITerminalNode BuiltInTypes() { return GetToken(ProtocolBuffers3Parser.BuiltInTypes, 0); }
		public ITerminalNode ImportKeyword() { return GetToken(ProtocolBuffers3Parser.ImportKeyword, 0); }
		public ITerminalNode ImportModifier() { return GetToken(ProtocolBuffers3Parser.ImportModifier, 0); }
		public ITerminalNode PackageKeyword() { return GetToken(ProtocolBuffers3Parser.PackageKeyword, 0); }
		public ITerminalNode OneOfKeyword() { return GetToken(ProtocolBuffers3Parser.OneOfKeyword, 0); }
		public ITerminalNode MapKeyword() { return GetToken(ProtocolBuffers3Parser.MapKeyword, 0); }
		public ITerminalNode OptionKeyword() { return GetToken(ProtocolBuffers3Parser.OptionKeyword, 0); }
		public ITerminalNode EnumKeyword() { return GetToken(ProtocolBuffers3Parser.EnumKeyword, 0); }
		public ITerminalNode MessageKeyword() { return GetToken(ProtocolBuffers3Parser.MessageKeyword, 0); }
		public ITerminalNode ToKeyword() { return GetToken(ProtocolBuffers3Parser.ToKeyword, 0); }
		public ITerminalNode ReservedKeyword() { return GetToken(ProtocolBuffers3Parser.ReservedKeyword, 0); }
		public ITerminalNode BooleanLiteral() { return GetToken(ProtocolBuffers3Parser.BooleanLiteral, 0); }
		public ITerminalNode ServiceKeyword() { return GetToken(ProtocolBuffers3Parser.ServiceKeyword, 0); }
		public ITerminalNode RpcKeyword() { return GetToken(ProtocolBuffers3Parser.RpcKeyword, 0); }
		public ITerminalNode StreamKeyword() { return GetToken(ProtocolBuffers3Parser.StreamKeyword, 0); }
		public ITerminalNode ReturnsKeyword() { return GetToken(ProtocolBuffers3Parser.ReturnsKeyword, 0); }
		public ITerminalNode Identifier() { return GetToken(ProtocolBuffers3Parser.Identifier, 0); }
		public FieldNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterFieldName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitFieldName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFieldName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldNameContext fieldName() {
		FieldNameContext _localctx = new FieldNameContext(Context, State);
		EnterRule(_localctx, 4, RULE_fieldName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BuiltInTypes) | (1L << ImportKeyword) | (1L << ImportModifier) | (1L << PackageKeyword) | (1L << OneOfKeyword) | (1L << MapKeyword) | (1L << OptionKeyword) | (1L << EnumKeyword) | (1L << MessageKeyword) | (1L << ServiceKeyword) | (1L << RpcKeyword) | (1L << StreamKeyword) | (1L << ReturnsKeyword) | (1L << ToKeyword) | (1L << ReservedKeyword) | (1L << BooleanLiteral) | (1L << Identifier))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SyntaxContext : ParserRuleContext {
		public ITerminalNode SyntaxKeyword() { return GetToken(ProtocolBuffers3Parser.SyntaxKeyword, 0); }
		public ITerminalNode AssignmentOperator() { return GetToken(ProtocolBuffers3Parser.AssignmentOperator, 0); }
		public ITerminalNode LanguageVersionConstant() { return GetToken(ProtocolBuffers3Parser.LanguageVersionConstant, 0); }
		public ITerminalNode ExpressionSeparator() { return GetToken(ProtocolBuffers3Parser.ExpressionSeparator, 0); }
		public SyntaxContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_syntax; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterSyntax(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitSyntax(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSyntax(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SyntaxContext syntax() {
		SyntaxContext _localctx = new SyntaxContext(Context, State);
		EnterRule(_localctx, 6, RULE_syntax);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(SyntaxKeyword);
			State = 92; Match(AssignmentOperator);
			State = 93; Match(LanguageVersionConstant);
			State = 94; Match(ExpressionSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportStatementContext : ParserRuleContext {
		public ITerminalNode ImportKeyword() { return GetToken(ProtocolBuffers3Parser.ImportKeyword, 0); }
		public ITerminalNode StringLiteral() { return GetToken(ProtocolBuffers3Parser.StringLiteral, 0); }
		public ITerminalNode ExpressionSeparator() { return GetToken(ProtocolBuffers3Parser.ExpressionSeparator, 0); }
		public ITerminalNode ImportModifier() { return GetToken(ProtocolBuffers3Parser.ImportModifier, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterImportStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitImportStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportStatementContext importStatement() {
		ImportStatementContext _localctx = new ImportStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_importStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(ImportKeyword);
			State = 98;
			_la = TokenStream.La(1);
			if (_la==ImportModifier) {
				{
				State = 97; Match(ImportModifier);
				}
			}

			State = 100; Match(StringLiteral);
			State = 101; Match(ExpressionSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageContext : ParserRuleContext {
		public ITerminalNode PackageKeyword() { return GetToken(ProtocolBuffers3Parser.PackageKeyword, 0); }
		public ITerminalNode FullIdentifier() { return GetToken(ProtocolBuffers3Parser.FullIdentifier, 0); }
		public ITerminalNode ExpressionSeparator() { return GetToken(ProtocolBuffers3Parser.ExpressionSeparator, 0); }
		public PackageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_package; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterPackage(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitPackage(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackage(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageContext package() {
		PackageContext _localctx = new PackageContext(Context, State);
		EnterRule(_localctx, 10, RULE_package);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(PackageKeyword);
			State = 104; Match(FullIdentifier);
			State = 105; Match(ExpressionSeparator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionValueContext : ParserRuleContext {
		public ITerminalNode BooleanLiteral() { return GetToken(ProtocolBuffers3Parser.BooleanLiteral, 0); }
		public ITerminalNode FullIdentifier() { return GetToken(ProtocolBuffers3Parser.FullIdentifier, 0); }
		public ITerminalNode IntegerLiteral() { return GetToken(ProtocolBuffers3Parser.IntegerLiteral, 0); }
		public ITerminalNode Sign() { return GetToken(ProtocolBuffers3Parser.Sign, 0); }
		public ITerminalNode FloatLiteral() { return GetToken(ProtocolBuffers3Parser.FloatLiteral, 0); }
		public ITerminalNode StringLiteral() { return GetToken(ProtocolBuffers3Parser.StringLiteral, 0); }
		public OptionValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterOptionValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitOptionValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionValueContext optionValue() {
		OptionValueContext _localctx = new OptionValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_optionValue);
		int _la;
		try {
			State = 118;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; Match(BooleanLiteral);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108; Match(FullIdentifier);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 110;
				_la = TokenStream.La(1);
				if (_la==Sign) {
					{
					State = 109; Match(Sign);
					}
				}

				State = 112; Match(IntegerLiteral);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 114;
				_la = TokenStream.La(1);
				if (_la==Sign) {
					{
					State = 113; Match(Sign);
					}
				}

				State = 116; Match(FloatLiteral);
				}
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 117; Match(StringLiteral);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionContext : ParserRuleContext {
		public ITerminalNode OptionKeyword() { return GetToken(ProtocolBuffers3Parser.OptionKeyword, 0); }
		public OptionNameContext optionName() {
			return GetRuleContext<OptionNameContext>(0);
		}
		public ITerminalNode AssignmentOperator() { return GetToken(ProtocolBuffers3Parser.AssignmentOperator, 0); }
		public OptionValueContext optionValue() {
			return GetRuleContext<OptionValueContext>(0);
		}
		public ITerminalNode ExpressionSeparator() { return GetToken(ProtocolBuffers3Parser.ExpressionSeparator, 0); }
		public OptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_option; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.EnterOption(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProtocolBuffers3Listener typedListener = listener as IProtocolBuffers3Listener;
			if (typedListener != null) typedListener.ExitOption(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IProtocolBuffers3Visitor<TResult> typedVisitor = visitor as IProtocolBuffers3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOption(this);
			else return visitor.VisitChildren(this);
		}
	}
